# baag_chal

./: LICENSE  elo.py  explore_baghchal.py  list_models.py  model_prices.py  play.py  run_match.py  tournament.py
backend/: pyproject.toml
backend/app/: api_models.py  env.py  main.py
frontend/: app.js  index.html  style.css
logs/elos/: allenaiolmo332bthinkfree.txt  anthropicclaudeopus45.txt  anthropicclaudesonnet45.txt  deepseekdeepseekv32.txt  googlegemini3flashpreview.txt  googlegemini3propreview.txt  metallamallama4maverick.txt  microsoftphi4reasoningplus.txt  mistralaimistrallarge2512.txt  openaigpt52.txt  openaigpt52pro.txt  qwenqwen330ba3b.txt  qwenqwen3coderfree.txt  qwenqwen3max.txt  summary_copy.csv  xaigrok4.txt  xaigrok41fast.txt
logs/game_logs/: 2025_12_20_test_experiment_bestof1_mistralaimistral7binstructfree_vs_allenaiolmo332bthinkfree.pgn  2025_12_20_test_experiment_timing_bestof1_mistralaimistral7binstructfree_vs_allenaiolmo332bthinkfree.pgn  2025_12_20_test_with_fast_models_bestof3_qwenqwen330ba3b_vs_qwenqwen330ba3binstruct2507.pgn  2025_12_20_test_with_fast_models_bestof3_qwenqwen330ba3binstruct2507_vs_qwenqwen330ba3b.pgn  2025_12_20_test_with_fast_models_bestof5_anthropicclaudeopus45_vs_googlegemini3propreview.pgn  2025_12_20_test_with_fast_models_bestof5_googlegemini3propreview_vs_anthropicclaudeopus45.pgn  2025_12_20_test_with_fast_models_bestof5_googlegemini3propreview_vs_openaigpt52pro.pgn  (+150 more)
model_names/: all_models  best_models  best_models_fast  best_os_models  free_models
