[project]
name = "bagh-chal-backend"
version = "0.1.0"
description = "Bagh Chal Game Backend with RL support"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "gymnasium>=0.29.0",
    "numpy>=1.26.0",
    "baghchal>=1.0.1",
    "pydantic>=2.0.0"
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "httpx>=0.27.0"
]
